Fix a header guard mistake (harmless but clearly wrong) https://bugs.webkit.org/show_bug.cgi?id=130559

Reviewed by Andreas Kling.

* wtf/text/StringConcatenate.h: Correct the macro name in the header guard.


Canonical link: https://commits.webkit.org/148584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166043 268f45cc-cd09-0410-ab3c-d52691b4dbfc